Issue #616 - Fixed multiline code block overflow

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -44,11 +44,11 @@ code {
 	font-size: 13px;
 	font-weight: bold;
 	margin: 5px 0;
-	overflow-x: auto;
 	padding: 0.5em;
 	vertical-align: middle;
 	word-wrap: break-word;
 	text-align: left;
+	white-space: pre-wrap;
 	&.inline {
 		display: inline-block;
 		padding: 0 5px;
@@ -1903,7 +1903,7 @@ a.github-fork {
 .page-settings {
 	.rocket-form {
 		max-width: none;
-		width: 100%; 
+		width: 100%;
 		padding: 0;
 	}
 }
@@ -3977,4 +3977,12 @@ a.github-fork {
 	.social-login {
 		margin-bottom: 10px;
 	}
+}
+
+.hljs2 {
+	display: block;
+	padding: 0.5em;
+	color: #333;
+	background: #f8f8f8;
+	-webkit-text-size-adjust: none;
 }
